<resources>
    <string name="app_name">爽啦</string>

    <string name="zhuanqian">赚钱中心</string>
    <string name="gaoe">高额任务</string>
    <string name="lianmeng">联盟任务</string>
    <string name="newgay">新手任务</string>
    <string name="shoutu">收徒</string>
    <string name="shengqian">省钱</string>
    <string name="duihuan">兑换</string>

    <string name="common_error">糟糕，加载失败</string>
    <string name="click_retry">点击重试</string>

    <string name="save_picture">保存图片</string>
    <string name="save_picture_failed">保存失败</string>
    <string name="save_picture_success">图片成功保存至%s目录</string>

</resources>
