<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/id_nestedscrollView_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:background="@color/top_bg"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.rey.material.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <com.rey.material.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <com.rey.material.widget.LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    >

                    <com.rey.material.widget.LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/id_main_yue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/id_main_yue_textview"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="left|bottom"
                                android:paddingLeft="10dp"
                                android:textColor="@android:color/white"
                                android:textSize="60sp"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1.8"
                                android:paddingLeft="20dp"
                                android:text="我的余额(元)"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"/>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.rey.material.widget.Button
                                android:id="@+id/id_main_tixian"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="5dp"
                                android:layout_marginLeft="80dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="40dp"
                                android:layout_weight="1"
                                android:background="@drawable/timoneny_bg"
                                android:text="提    现"
                                android:textColor="@android:color/white"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1.8"
                                />

                        </LinearLayout>

                    </com.rey.material.widget.LinearLayout>

                </com.rey.material.widget.LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    >

                    <com.rey.material.widget.LinearLayout
                        android:id="@+id/id_detil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/id_main_todaymoney"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|bottom"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="今天收入"
                            android:textSize="12sp"
                            />


                    </com.rey.material.widget.LinearLayout>

                    <com.rey.material.widget.LinearLayout
                        android:id="@+id/id_more"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_weight="1"
                        android:background="@android:color/white"
                        android:orientation="vertical"
                        android:text="更多"
                        android:textSize="18sp"
                        >

                        <TextView
                            android:id="@+id/id_main_totalmoney"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|bottom"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            android:text="累计收入"
                            android:textSize="12sp"
                            />
                    </com.rey.material.widget.LinearLayout>

                </LinearLayout>

            </com.rey.material.widget.LinearLayout>

            <com.rey.material.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="310dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.rey.material.widget.LinearLayout
                    android:id="@+id/id_linear_zhuanqian"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:src="@drawable/zhuanqian"
                        android:padding="3dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/zhuanqian"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="100%实现返现"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"/>

                </com.rey.material.widget.LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="80dp"
                    android:background="@color/line_color"
                    />

                <com.rey.material.widget.LinearLayout
                    android:id="@+id/id_linear_shoutu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:src="@drawable/gaoe"
                        android:padding="3dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/gaoe"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="任务单价1-200+元不等"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"/>

                </com.rey.material.widget.LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="80dp"
                    android:background="@color/line_color"
                    />

                <com.rey.material.widget.LinearLayout
                    android:id="@+id/id_linear_yiyuan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:src="@drawable/lianmengrenwu"
                        android:padding="3dp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/lianmeng"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="下载试用立得现金"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"/>

                </com.rey.material.widget.LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="80dp"
                    android:background="@color/line_color"
                    />

                <com.rey.material.widget.LinearLayout
                    android:id="@+id/id_linear_qiankafanli"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:src="@drawable/newguy"
                        android:padding="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/newgay"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="完成就赚0.3元"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"/>

                </com.rey.material.widget.LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    />

                <com.rey.material.widget.LinearLayout
                    android:id="@+id/id_linear_youhuijuan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.2"
                        android:src="@drawable/shoutu"
                        android:padding="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/shoutu"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="right|center"
                        android:text="超高奖励，上不封顶"
                        android:textSize="13sp"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"/>
                </com.rey.material.widget.LinearLayout>
            </com.rey.material.widget.LinearLayout>
        </com.rey.material.widget.LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
